# fossil

./: .fossilrc.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  TODO.md
src/: cli.rs  config.rs  filters.rs  git.rs  lib.rs  main.rs  models.rs  reporter.rs  scanner.rs
