[package]
name = "fossil"
version = "0.1.0"
edition = "2024"
authors = ["Jake Redrupp"]
description = "Unearth your technical debt - CLI tool for tracking TODO, FIXME, and other debt markers"
license = "MIT"
repository = "https://github.com/JRedruppe/fossil"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Git integration
git2 = "0.18"

# File traversal
ignore = "0.4"

# Pattern matching
regex = "1.10"

# Output formatting
comfy-table = "7.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"

# System paths
dirs = "5.0"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"
predicates = "3.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
